[gd_scene load_steps=2 format=3 uid="uid://byv8rt76sqhox"]

[ext_resource type="Script" uid="uid://bptlygved50sd" path="res://UI/SkillHudIcon.gd" id="1_2m0vh"]

[node name="SkillHudIcon" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2m0vh")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CooldownBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
max_value = 1.0
value = 0.5
fill_mode = 3
show_percentage = false

[node name="CooldownLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeybindLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 11.0
text = "E"
